# bluebox

./: .gitignore  .hgignore  CMakeLists.txt  CREDITS  ChangeLog  dev_log.txt
bandb/: bandb.c  bantool.c
bandb/sqlite3/: shell.c
cmake/: InstallMotd.cmake.in  ModMacros.cmake
contrib/: CMakeLists.txt  README  example_module.c  m_42.c  m_clearchan.c  m_mkpasswd.c  m_opme.c  m_rsshortcut.c  spy_info_notice.c  spy_stats_p_notice.c
doc/: example.conf.cmake  example.efnet.conf  services.txt
help/opers/: dline  resv  stats
help/users/: umode
include/: cache.h  channel.h  class.h  client.h  cloak.h  defaults.h  hash.h  hook.h  monitor.h  newconf.h  reject.h  s_auth.h  s_conf.h  s_gline.h  s_log.h  s_newconf.h  send.h  serno.h  stdinc.h  struct.h
libratbox/: ChangeLog  libratbox_config.h.cmake
libratbox/include/: event-int.h  rb_helper.h  rb_tools.h
libratbox/src/: arc4random.c  crypt.c  devpoll.c  epoll.c  helper.c  nossl.c  patricia.c  poll.c  ports.c  rawbuf.c  select.c  snprintf.c
libratboxcore/: CMakeLists.txt  cache.c  channel.c  client.c  cloak.c  ircd.c  ircd_lexer.c  listener.c  match.c  messages.tab  modules.c  newconf.c  operhash.c  reject.c  s_auth.c  s_conf.c  s_log.c  s_newconf.c  s_user.c  scache.c  version.c.SH
modules/: CMakeLists.txt  gencmake.sh  m_admin.c  m_dline.c  m_encap.c  m_kline.c  m_knock.c  m_lusers.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_rehash.c  m_spam.c  m_tb.c  m_testline.c  m_testmask.c  m_time.c  m_trace.c  m_unreject.c  m_user.c  m_userhost.c  m_whois.c
modules/core/: m_error.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_part.c  m_quit.c  m_squit.c
resolver/: CMakeLists.txt  getaddrinfo.c  reslib.h
ssld/: ssld.c
tools/: Makefile.am
trunk/: CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  RELNOTES  SVN-Access  acinclude.m4  aclocal.m4  configure  configure.ac
trunk/bandb/: CMakeLists.txt  Makefile.in  bandb.c
trunk/bandb/sqlite3/: CMakeLists.txt  Makefile.in
trunk/contrib/: CMakeLists.txt  Makefile.am  Makefile.in  ircd-shortcut.pl  m_flags.c  m_force.c  m_hdump.c  m_ojoin.c  m_okick.c  m_olist.c  m_webirc.c  spy_admin_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_whois_notice.c  spy_whois_notice_global.c
trunk/doc/: Makefile.in  example.conf  example.conf.cmake  example.efnet.conf  genssl.sh
trunk/help/: Makefile.in
trunk/help/opers/: kline  rehash  umode  xline
trunk/help/users/: stats  umode
trunk/include/: bandbi.h  channel.h  client.h  config.h  defaults.h  hash.h  hook.h  hostmask.h  ircd.h  ircd_defs.h  ircd_getopt.h  listener.h  match.h  modules.h  numeric.h  operhash.h  packet.h  parse.h  patchlevel.h  reject.h  s_conf.h  s_newconf.h  s_serv.h  s_stats.h  setup.h.cmake  setup.h.in  sha1.h  sslproc.h  struct.h  supported.h  whowas.h
trunk/libltdl/: CMakeLists.txt  ltdl.c
trunk/libratbox/: CMakeLists.txt  CheckStructMember.cmake  Makefile.in  aclocal.m4  configure  configure.ac  libratbox_config.h.cmake  librb-config.h.cmake
trunk/libratbox/include/: commio-int.h  commio-ssl.h  libratbox_config.h.in  ratbox_lib.h  rb_commio.h  rb_helper.h  rb_linebuf.h  rb_memory.h  rb_patricia.h  serno.h
trunk/libratbox/src/: Makefile.in  arc4random.c  balloc.c  commio.c  devpoll.c  epoll.c  event.c  gnutls.c  helper.c  kqueue.c  linebuf.c  openssl.c  ratbox_lib.c  rb_memory.c  select.c  sigio.c  tools.c  unix.c  version.c.SH  win32.c
trunk/libratboxcore/: CMakeLists.txt  Makefile.am  bandbi.c  cache.c  channel.c  class.c  client.c  cloak.c  dns.c  getopt.c  hash.c  hook.c  hostmask.c  ircd.c  ircd_lexer.l  ircd_parser.c  ircd_parser.y  ircd_signal.c  listener.c  messages.tab  modules.c  monitor.c  newconf.c  numeric.c  operhash.c  packet.c  parse.c  reject.c  restart.c  s_conf.c  s_log.c  s_newconf.c  s_serv.c  s_user.c  send.c  sha1.c  sslproc.c  supported.c  whowas.c
trunk/libresolver/: CMakeLists.txt  res.h
trunk/modules/: CMakeLists.txt  Makefile.am  Makefile.in  gencmake.sh  m_accept.c  m_admin.c  m_adminwall.c  m_away.c  m_cap.c  m_capab.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_gline.c  m_gungline.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  m_resv.c  (+21 more)
trunk/modules/core/: m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
trunk/resolver/: CMakeLists.txt  Makefile.in  res.c  reslib.c  resolver.c
trunk/src/: CMakeLists.txt  Makefile.in  bandbi.c  cache.c  channel.c  client.c  dns.c  ircd_lexer.c  match.c  messages.tab  modules.c  numeric.c  s_auth.c  s_conf.c  s_log.c  s_serv.c  s_user.c  sslproc.c  supported.c  whowas.c
trunk/ssld/: CMakeLists.txt  Makefile.in  ssld.c
trunk/tools/: Makefile.in  mkpasswd.c
