
PROJECT(modules/contrib)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${libratbox_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${libratbox_BINARY_DIR} ${bluebox_BINARY_DIR})
INCLUDE_DIRECTORIES(${bluebox_SOURCE_DIR}/include)

ADD_LIBRARY(example_module MODULE example_module.c)
SET_TARGET_PROPERTIES(example_module PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(example_module ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS example_module DESTINATION modules/contrib)

ADD_LIBRARY(m_42 MODULE m_42.c)
SET_TARGET_PROPERTIES(m_42 PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_42 ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_42 DESTINATION modules/contrib)

ADD_LIBRARY(m_clearchan MODULE m_clearchan.c)
SET_TARGET_PROPERTIES(m_clearchan PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_clearchan ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_clearchan DESTINATION modules/contrib)

ADD_LIBRARY(m_flags MODULE m_flags.c)
SET_TARGET_PROPERTIES(m_flags PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_flags ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_flags DESTINATION modules/contrib)

ADD_LIBRARY(m_force MODULE m_force.c)
SET_TARGET_PROPERTIES(m_force PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_force ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_force DESTINATION modules/contrib)

ADD_LIBRARY(m_mkpasswd MODULE m_mkpasswd.c)
SET_TARGET_PROPERTIES(m_mkpasswd PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_mkpasswd ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_mkpasswd DESTINATION modules/contrib)

ADD_LIBRARY(m_ojoin MODULE m_ojoin.c)
SET_TARGET_PROPERTIES(m_ojoin PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_ojoin ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_ojoin DESTINATION modules/contrib)

ADD_LIBRARY(m_okick MODULE m_okick.c)
SET_TARGET_PROPERTIES(m_okick PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_okick ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_okick DESTINATION modules/contrib)

ADD_LIBRARY(m_olist MODULE m_olist.c)
SET_TARGET_PROPERTIES(m_olist PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_olist ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_olist DESTINATION modules/contrib)

ADD_LIBRARY(m_opme MODULE m_opme.c)
SET_TARGET_PROPERTIES(m_opme PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_opme ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_opme DESTINATION modules/contrib)

ADD_LIBRARY(m_webirc MODULE m_webirc.c)
SET_TARGET_PROPERTIES(m_webirc PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_webirc ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_webirc DESTINATION modules/contrib)

ADD_LIBRARY(spy_admin_notice MODULE spy_admin_notice.c)
SET_TARGET_PROPERTIES(spy_admin_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_admin_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_admin_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_info_notice MODULE spy_info_notice.c)
SET_TARGET_PROPERTIES(spy_info_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_info_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_info_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_links_notice MODULE spy_links_notice.c)
SET_TARGET_PROPERTIES(spy_links_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_links_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_links_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_motd_notice MODULE spy_motd_notice.c)
SET_TARGET_PROPERTIES(spy_motd_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_motd_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_motd_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_stats_notice MODULE spy_stats_notice.c)
SET_TARGET_PROPERTIES(spy_stats_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_stats_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_stats_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_stats_p_notice MODULE spy_stats_p_notice.c)
SET_TARGET_PROPERTIES(spy_stats_p_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_stats_p_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_stats_p_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_whois_notice MODULE spy_whois_notice.c)
SET_TARGET_PROPERTIES(spy_whois_notice PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_whois_notice ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_whois_notice DESTINATION modules/contrib)

ADD_LIBRARY(spy_whois_notice_global MODULE spy_whois_notice_global.c)
SET_TARGET_PROPERTIES(spy_whois_notice_global PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(spy_whois_notice_global ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS spy_whois_notice_global DESTINATION modules/contrib)

